# MindPalace

./: .env.example  .gitignore  FUSION_PLAN.md  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  akashic-agent.code-workspace  interview_qa.md  introduction.md  pyproject.toml  start_mindpalace.bat  重点方向参考.md  项目简述.txt
data/: user_profile.md.example
data/inquiry/: philosophy.json  self.json  thought_experiments.json
data/learn/: .keep
data/personas/: .keep
src/: __init__.py  __main__.py  app.py  config.py
src/council/: __init__.py  flow.py  judge.py  output.py  paradigms.py  protocol_registry.py  protocols.py  rebuttal.py  registry.py  roles.py  router.py  state.py
src/eval/: __init__.py  feedback.py  judge_debates.py  prompt_iterator.py
src/inquiry/: __init__.py  analysis.py  cli.py  diff.py  library.py  session.py  types.py
src/llm/: __init__.py  client.py
src/memory/: brain_export.py  crystallize.py  echo.py  embedder.py  evolution.py  profiler.py  store.py  trajectory.py
src/obs/: __init__.py  tracing.py
src/resolve/: engine.py
src/scout/: __init__.py  fetch.py  normalize.py  pipeline.py  score.py  translate.py
tests/: test_archive_cli.py  test_article_library.py  test_config_api_testing.py  test_config_feeds.py  test_council_flow.py  test_dialogue_ux.py  test_inquiry.py  test_inquiry_diff.py  test_llm_robustness.py  test_memory.py  test_memory_embedder.py  test_memory_evolution.py  test_obs.py  test_phase_c.py  test_pipeline.py  test_quick_setup.py  test_scout_pipeline.py  test_scout_translate.py  test_ux_input.py  test_ux_progress.py
(+12 files in other folders)
