[project]
name = "mindpalace"
version = "0.1.0"
description = "MindPalace Agent — 你的私人认知进化实验室"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0",
    "httpx>=0.27",
    "feedparser>=6.0",
    "python-dotenv>=1.0",
    "questionary>=2.0",
    "numpy>=1.24",
    "duckduckgo-search>=7.0",
    "opentelemetry-api>=1.25",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
obs = [
    "arize-phoenix>=5.0",
    "arize-phoenix-otel>=0.6",
    "openinference-instrumentation-openai>=0.1.14",
    "opentelemetry-sdk>=1.25",
    "opentelemetry-exporter-otlp>=1.25",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
